apps/configs/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.local.ruizops.com`)
      kind: Rule
      priority: 100
      services:
        - name: homepage
          namespace: homepage
          port: 3000
  tls:
    secretName: homepage-tls
